cmake_minimum_required(VERSION 2.8.4 FATAL_ERROR)

add_subdirectory(BASE)
add_subdirectory(sim)
add_subdirectory(rec)
add_subdirectory(QA)
add_subdirectory(pendolino)
add_subdirectory(shuttle)
add_subdirectory(RCU)
add_subdirectory(TPCLib)
add_subdirectory(CALO)
add_subdirectory(EMCAL)
add_subdirectory(PHOS)
add_subdirectory(MUON)
add_subdirectory(TRD)
add_subdirectory(ITS)
add_subdirectory(VZERO)
add_subdirectory(ZDC)
add_subdirectory(global)
add_subdirectory(trigger)
