cmake_minimum_required(VERSION 2.8.4 FATAL_ERROR)

add_subdirectory(MUONcore)
add_subdirectory(MUONmapping)
add_subdirectory(MUONgeometry)
add_subdirectory(MUONcalib)
add_subdirectory(MUONraw)
add_subdirectory(MUONtrigger)
add_subdirectory(MUONbase)
add_subdirectory(MUONsim)
add_subdirectory(MUONrec)
add_subdirectory(MUONevaluation)
add_subdirectory(MUONcalign)
add_subdirectory(MUONshuttle)
add_subdirectory(MUONgraphics)
add_subdirectory(MUONmpgraphics)
add_subdirectory(mchview)
